--- a/app/views/templates/citymapper.html
+++ b/app/views/templates/citymapper.html
@@ -3,7 +3,7 @@
 <head><meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>CityMapper Tropical Island</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>islandmapper</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 
 
 
@@ -14579,7 +14579,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h1 id="CityMapper-Tropical-Island-Take-Home-Assignment">CityMapper Tropical-Island Take Home Assignment<a class="anchor-link" href="#CityMapper-Tropical-Island-Take-Home-Assignment">&#182;</a></h1>
+<h1 id="IslandMapper-Take-Home-Assignment">IslandMapper Take-Home Assignment<a class="anchor-link" href="#IslandMapper-Take-Home-Assignment">&#182;</a></h1><h1 id="Benjamin-Carneiro">Benjamin Carneiro<a class="anchor-link" href="#Benjamin-Carneiro">&#182;</a></h1>
 </div>
 </div>
 </div>
