fix the SQL for question 2

--- a/app/views/templates/citymapper.html
+++ b/app/views/templates/citymapper.html
@@ -14916,20 +14916,20 @@ BananaBus2,Weekdays,Banana_Ban2_1002,Eastbound
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># UPDATE trips </span>
-<span class="c1"># SET headsign = &quot;Island City&quot;</span>
+<span class="c1"># SET trip_headsign = &quot;Island City&quot;</span>
 <span class="c1"># WHERE trip_id = &quot;Banana_Ban1_1001&quot;;</span>
 
 <span class="c1"># UPDATE routes </span>
-<span class="c1"># SET headsign = &quot;Haunted Jungle&quot;</span>
-<span class="c1"># WHERE route_short_name = &quot;Banana_Ban2_1001&quot;;</span>
+<span class="c1"># SET trip_headsign = &quot;Haunted Jungle&quot;</span>
+<span class="c1"># WHERE trip_id = &quot;Banana_Ban2_1001&quot;;</span>
 
 <span class="c1"># UPDATE trips </span>
-<span class="c1"># SET headsign = &quot;South Beach&quot;</span>
+<span class="c1"># SET trip_headsign = &quot;South Beach&quot;</span>
 <span class="c1"># WHERE trip_id = &quot;Banana_Ban1_1002&quot;;</span>
 
 <span class="c1"># UPDATE routes </span>
-<span class="c1"># SET headsign = &quot;South Beach&quot;</span>
-<span class="c1"># WHERE route_short_name = &quot;Banana_Ban2_1002&quot;;</span>
+<span class="c1"># SET trip_headsign = &quot;South Beach&quot;</span>
+<span class="c1"># WHERE trip_id = &quot;Banana_Ban2_1002&quot;;</span>
 </pre></div>
 
      </div>
