fix the SQL for question 2

--- a/app/views/templates/citymapper.html
+++ b/app/views/templates/citymapper.html
@@ -14919,7 +14919,7 @@ BananaBus2,Weekdays,Banana_Ban2_1002,Eastbound
 <span class="c1"># SET trip_headsign = &quot;Island City&quot;</span>
 <span class="c1"># WHERE trip_id = &quot;Banana_Ban1_1001&quot;;</span>
 
-<span class="c1"># UPDATE routes </span>
+<span class="c1"># UPDATE trips </span>
 <span class="c1"># SET trip_headsign = &quot;Haunted Jungle&quot;</span>
 <span class="c1"># WHERE trip_id = &quot;Banana_Ban2_1001&quot;;</span>
 
@@ -14927,7 +14927,7 @@ BananaBus2,Weekdays,Banana_Ban2_1002,Eastbound
 <span class="c1"># SET trip_headsign = &quot;South Beach&quot;</span>
 <span class="c1"># WHERE trip_id = &quot;Banana_Ban1_1002&quot;;</span>
 
-<span class="c1"># UPDATE routes </span>
+<span class="c1"># UPDATE trips </span>
 <span class="c1"># SET trip_headsign = &quot;South Beach&quot;</span>
 <span class="c1"># WHERE trip_id = &quot;Banana_Ban2_1002&quot;;</span>
 </pre></div>
