fix the damn font on answer 4

--- a/app/views/templates/citymapper.html
+++ b/app/views/templates/citymapper.html
@@ -14919,7 +14919,7 @@ BananaBus2,Weekdays,Banana_Ban2_1002,Eastbound
 <span class="c1"># SET trip_headsign = &quot;Island City&quot;</span>
 <span class="c1"># WHERE trip_id = &quot;Banana_Ban1_1001&quot;;</span>
 
-<span class="c1"># UPDATE trips </span>
+<span class="c1"># UPDATE routes </span>
 <span class="c1"># SET trip_headsign = &quot;Haunted Jungle&quot;</span>
 <span class="c1"># WHERE trip_id = &quot;Banana_Ban2_1001&quot;;</span>
 
@@ -14927,7 +14927,7 @@ BananaBus2,Weekdays,Banana_Ban2_1002,Eastbound
 <span class="c1"># SET trip_headsign = &quot;South Beach&quot;</span>
 <span class="c1"># WHERE trip_id = &quot;Banana_Ban1_1002&quot;;</span>
 
-<span class="c1"># UPDATE trips </span>
+<span class="c1"># UPDATE routes </span>
 <span class="c1"># SET trip_headsign = &quot;South Beach&quot;</span>
 <span class="c1"># WHERE trip_id = &quot;Banana_Ban2_1002&quot;;</span>
 </pre></div>
@@ -15074,8 +15074,7 @@ BananaBus2,Weekdays,Banana_Ban2_1002,Eastbound
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p>The Haunted Jungle is so far west that it's in the eastern hemisphere. The most common causes of bugs here are projection issues and inattention to datatypes.</p>
-
+<h2 id="The-Haunted-Jungle-is-so-far-west-that-it's-in-the-eastern-hemisphere.-The-most-common-causes-of-bugs-here-are-projection-issues-and-inattention-to-datatypes.">The Haunted Jungle is so far west that it's in the eastern hemisphere. The most common causes of bugs here are projection issues and inattention to datatypes.<a class="anchor-link" href="#The-Haunted-Jungle-is-so-far-west-that-it's-in-the-eastern-hemisphere.-The-most-common-causes-of-bugs-here-are-projection-issues-and-inattention-to-datatypes.">&#182;</a></h2>
 </div>
 </div>
 </div>
