fix typo in job app

--- a/app/views/templates/citymapper.html
+++ b/app/views/templates/citymapper.html
@@ -14746,7 +14746,7 @@ Stop_BeachSouth,The Beach (South) Bus Station,49.403503,-178.966984
 <h2 id="IslandMapper-should-suggest-the-bus-for-almost-everybody-on-the-south-half-of-the-beach">IslandMapper should suggest the bus for almost everybody on the south half of the beach<a class="anchor-link" href="#IslandMapper-should-suggest-the-bus-for-almost-everybody-on-the-south-half-of-the-beach">&#182;</a></h2><h3 id="FROM-SOUTH-BEACH-TO-ISLAND-CITY:">FROM SOUTH BEACH TO ISLAND CITY:<a class="anchor-link" href="#FROM-SOUTH-BEACH-TO-ISLAND-CITY:">&#182;</a></h3><h3 id="On-Bus:-20-Minutes">On Bus: 20 Minutes<a class="anchor-link" href="#On-Bus:-20-Minutes">&#182;</a></h3><p>Walk: 0 Min</p>
 <p>Wait: 5 Min (avg)</p>
 <p>Transit: 15 Min</p>
-<h3 id="Train-plus-Bike:-:-46---53.5-Minutes">Train plus Bike: : 46 - 53.5 Minutes<a class="anchor-link" href="#Train-plus-Bike:-:-46---53.5-Minutes">&#182;</a></h3><p>Cycle: 31 Min</p>
+<h3 id="Train-plus-Bike:-:-46---53.5-Minutes">Train plus Bike: 46 - 53.5 Minutes<a class="anchor-link" href="#Train-plus-Bike:-:-46---53.5-Minutes">&#182;</a></h3><p>Cycle: 31 Min</p>
 <p>Wait: 0 min planned trip, 7.5 minutes for random arrival</p>
 <p>Transit: 15 Min</p>
 <h3 id="On-Train:-2-Hours,-19-26.5-Minutes">On Train: 2 Hours, 19-26.5 Minutes<a class="anchor-link" href="#On-Train:-2-Hours,-19-26.5-Minutes">&#182;</a></h3><p>Walk: 124 Min</p>
