--- a/app/views/templates/blog.html
+++ b/app/views/templates/blog.html
@@ -22,6 +22,23 @@
                 document.getElementById('chart'),
                 {
                     type: 'line',
+                    options: {
+                        scales: {
+                            yAxes: [{
+                                ticks: {
+                                    // Include a dollar sign in the ticks
+                                    callback: function(value, index, ticks) {
+                                        return (
+                                            new Intl.NumberFormat("en-US", {
+                                                notation: "compact",
+                                                compactDisplay: "short",
+                                                }).format(value)
+                                        )
+                                    }
+                                }
+                            }]
+                        }
+                    },
                     data: 
                     {
                         labels: resp.data.data.map(row => row.year),
@@ -45,6 +62,23 @@
                 document.getElementById('chart2'),
                 {
                     type: 'bar',
+                    options: {
+                        scales: {
+                            yAxes: [{
+                                ticks: {
+                                    // Include a dollar sign in the ticks
+                                    callback: function(value, index, ticks) {
+                                        return (
+                                            new Intl.NumberFormat("en-US", {
+                                                notation: "compact",
+                                                compactDisplay: "short",
+                                                }).format(value)
+                                        )
+                                    }
+                                }
+                            }]
+                        }
+                    },
                     data: 
                     {
                         labels: resp.data.data.map(row => row.year),
@@ -81,6 +115,23 @@
             document.getElementById('chart3'),
             {
                 type: 'bar',
+                options: {
+                    scales: {
+                        yAxes: [{
+                            ticks: {
+                                // Include a dollar sign in the ticks
+                                callback: function(value, index, ticks) {
+                                    return (
+                                        new Intl.NumberFormat("en-US", {
+                                            notation: "compact",
+                                            compactDisplay: "short",
+                                            }).format(value)
+                                    )
+                                }
+                            }
+                        }]
+                    }
+                },
                 data: 
                 {
                     labels: resp.data.data.map(row => row.year),
